--- a/index.html
+++ b/index.html
@@ -6,9 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
     <link rel="stylesheet" href="stylesheets/main.css">
-    <title>Flow</title>
+    <title>Elevators</title>
 </head>
 <body>
+    <div class="building-zone">
+        <div class="roof"></div>
+        <div class="facade">
+            <div class="elevator left"></div>
+            <div class="elevator right"></div>
+        </div>
+    </div>
     <script src="scripts/main.js"></script>
 </body>
 </html>
