adds input button and makes elevators smaller

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <div class="roof"></div>
         <div class="facade">
             <div class="elevator left"></div>
+            <input class="button" type="button" value="^">
             <div class="elevator right"></div>
         </div>
     </div>
