--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <div class="building-zone">
         <div class="roof"></div>
         <div class="facade">
-            <div class="elevator left"></div>
-            <input class="button" type="button" value="^">
-            <div class="elevator right"></div>
+            <div class="elevator left" data-left></div>
+            <input class="button" type="button" value="🔼" data-translate>
+            <div class="elevator right" data-right></div>
         </div>
     </div>
     <script src="scripts/main.js"></script>
