--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <div class="elevator right" data-right></div>
         </div>
     </div>
+    <div class="ground"></div>
     <script src="scripts/main.js"></script>
 </body>
 </html>
